@@ -56,6 +56,8 @@ void PdfParserObject::Init()
 {
     m_bStream       = false;
     m_lStreamOffset = 0;
+
+    PdfObject::Init();
 }
 
 PdfError PdfParserObject::ReadObjectNumber()
@@ -316,7 +318,7 @@ PdfError PdfParserObject::ParseDictionaryKeys( char* szBuffer, long lBufferLen, 
             {
                 cVariant.ToString( sValue );
 #ifdef _DEBUG
-                printf("Got Value: (%s) %i belongs to: %s\n", sValue.c_str(), (int)cVariant.GetDataType(), this->Reference().c_str() );
+                printf("Key: (%s) Got Value: (%s) %i belongs to: %s\n", cName.Name(), sValue.c_str(), (int)cVariant.GetDataType(), this->Reference().ToString().c_str() );
 #endif // _DEBUG
                 this->AddKey( cName, cVariant );
             }
